# bam-filtering-rust

./: Cargo.toml  LICENSE  README.md  build.sh
src/: main.rs
